Redid componenttests to test the changes to the playlistapi
