# bevrand.playlistapi/api/swagger/private_users_update.yml
@@ -4,12 +4,12 @@ Provide a username playlistname and a json_body
 tags:
   - Private Methods
 parameters:
-  - name: user_name
+  - name: userName
     type: string
     in: path
     required: true
     description: user you want to update a playlist for
-  - name: play_list_name
+  - name: playListName
     type: string
     in: path
     required: true
